<resources>
    <string name="app_name">Paypay!</string>
    <string name="apps">PayPay! Apps </string>
    <string name="versi">Versi 1.0</string>
    <string name="slogan">Bayar Cepat, Belanja Senang :)</string>
    <string name="develop">Develop by Cloudless @2021</string>
    <string name="login">Masuk Aplikasi</string>
    <string name="create">Daftar Akun</string>
    <string name="page">Halaman</string>
    <string name="username">Nama Pengguna</string>
    <string name="password">Kata Sandi</string>
    <string name="email">E-Mail</string>
    <string name="lupa">Lupa Kata Sandi ?</string>
    <string name="send">Kirim Request Email</string>
    <string name="kirim">Kirim</string>
    <string name="akun">Akun</string>
    <string name="pemberitahuan">Pemberitahuan</string>
    <string name="favorit">Favorit</string>
    <string name="utama">Utama</string>
    <string name="pencarian">Pencarian</string>
    <string name="promo_hari_ini">Promo Hari Ini</string>
    <string name="promo_merchant">Promo Merchant</string>
    <string name="payment_hasil">Hasil Transaksi</string>
    <string name="gagal">Transaksi Gagal:(</string>
    <string name="berhasil">Transaksi Berhasil:)</string>
    <string name="kembali">Kembali</string>
    <string name="item">Items </string>
    <string name="harga">Rp.5xxx</string>
    <string name="detail">Detail Transaksi</string>
    <string name="menu_home">Menu Utama</string>
    <string name="riwayat">Riwayat Transaksi</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="harga_total">Harga Total</string>
    <string name="jumlah_item">Jumlah Item</string>
    <string name="diskon">0</string>
    <string name="sub_total">Total</string>
    <string name="bayar">Bayar</string>
    <string name="profil">Profil Pengguna</string>
    <string name="edit_gambar">Ubah Gambar</string>
    <string name="detail_user">Detail Profil</string>
    <string name="tanggal">Tanggal</string>
    <string name="gender">Gender</string>
    <string name="telepon">Telepon</string>
    <string name="keluar">Keluar</string>
    <string name="jumlah">Jumlah</string>
    <string name="total">Total</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="capture">Capture</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="belanja_sekarang">Belanja Sekarang</string>
    <string name="dummy_sub">Subtotal: 200,000</string>
    <string name="scan_camera">Scan Produk</string>
    <string name="scan_qr">QR Kode</string>
    <string name="pilih_merchant">Pilih Merchant</string>
    <string name="no_product">Anda Belum Menambahkan Produk Apapun</string>
    <string name="diskon1">Diskon</string>
    <string name="loading">Loading</string>
    <string name="anda_belum_belanja_apapun">Anda Belum Belanja Apapun</string>
</resources>