<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nagation_graph"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cloudless.paypay.ui.home.HomeFragment"
        android:label="@string/utama"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_favorit"
        android:name="com.cloudless.paypay.ui.favorit.FavoritFragment"
        android:label="@string/favorit"
        tools:layout="@layout/fragment_favorit" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.cloudless.paypay.ui.notification.NotificationsFragment"
        android:label="@string/pemberitahuan"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.cloudless.paypay.ui.account.AccountFragment"
        android:label="@string/akun"
        tools:layout="@layout/fragment_account" />
</navigation>