<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.account.AccountFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:background="@color/blueSky"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:src="@drawable/profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/robotocondensed_bold"
            android:text="@string/username"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/robotocondensed_bold"
            android:text="@string/email"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotocondensed_bold"
        android:text="@string/detail_user"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.017"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/editText"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableEnd="@drawable/ic_baseline_edit_24"
            android:ems="10"
            android:fontFamily="@font/robotocondensed_regular"
            android:inputType="text"
            android:text="@string/username"
            android:textSize="@dimen/_14ssp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:drawableEnd="@drawable/ic_baseline_edit_24"
            android:ems="10"
            android:fontFamily="@font/robotocondensed_regular"
            android:inputType="text"
            android:text="@string/tanggal"
            android:textSize="@dimen/_14ssp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:drawableEnd="@drawable/ic_baseline_edit_24"
            android:ems="10"
            android:fontFamily="@font/robotocondensed_regular"
            android:inputType="text"
            android:text="@string/email"
            android:textSize="@dimen/_14ssp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:drawableEnd="@drawable/ic_baseline_edit_24"
            android:ems="10"
            android:fontFamily="@font/robotocondensed_regular"
            android:inputType="text"
            android:text="@string/gender"
            android:textSize="@dimen/_14ssp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:drawableEnd="@drawable/ic_baseline_edit_24"
            android:ems="10"
            android:fontFamily="@font/robotocondensed_regular"
            android:inputType="text"
            android:text="@string/telepon"
            android:textSize="@dimen/_14ssp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:drawableEnd="@drawable/ic_baseline_edit_24"
            android:ems="10"
            android:fontFamily="@font/robotocondensed_regular"
            android:inputType="text"
            android:text="@string/password"
            android:textSize="@dimen/_14ssp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riwayat"
        android:textColor="@color/blueSea"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
        app:layout_constraintVertical_bias="0.107"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_kembali"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_100sdp"
        android:backgroundTint="@color/blueSea"
        android:fontFamily="@font/robotocondensed_regular"
        android:shadowColor="@color/black"
        android:text="@string/keluar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.333"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>