<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/blueSky"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/img_success"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_width="@dimen/_86sdp"
            android:layout_height="@dimen/_86sdp"
            android:background="@drawable/checkicon"
            android:textAlignment="center"
            android:contentDescription="@string/gagal" />
        <TextView
            android:id="@+id/tvSuccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berhasil"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/robotocondensed_regular"
            android:textSize="@dimen/_20ssp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/_290sdp"
        android:layout_height="@dimen/_320sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background">
        <TextView
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp"
            android:fontFamily="@font/robotocondensed_regular"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_produk_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            tools:listitem="@layout/item_checkout"/>

        <TextView
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/robotocondensed_regular"
            android:text="@string/riwayat"
            android:textColor="@color/blueSea"
            android:textSize="@dimen/_15ssp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_kembali"
            app:cornerRadius="@dimen/_5sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:backgroundTint="@color/blueSea"
            android:fontFamily="@font/robotocondensed_regular"
            android:shadowColor="@color/black"
            android:text="@string/menu_home"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="@dimen/_14ssp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>