<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueSea"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:subtitle="@string/login"
            app:subtitleTextColor="@color/white"
            app:title="@string/page"
            app:titleTextColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/undraw_shopping_app_flsj"
        android:layout_width="300dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.048"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotocondensed_bold"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.084"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:drawableEnd="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:fontFamily="@font/robotocondensed_regular"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.051"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:drawableEnd="@drawable/ic_baseline_vpn_key_24"
        android:ems="10"
        android:fontFamily="@font/robotocondensed_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_username"
        app:layout_constraintVertical_bias="0.051"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotocondensed_bold"
        android:text="@string/lupa"
        android:textColor="@color/blueSea"
        android:textSize="15sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        app:layout_constraintVertical_bias="0.084"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_Masuk"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blueSea"
        android:fontFamily="@font/robotocondensed_regular"
        android:shadowColor="@color/black"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        app:layout_constraintVertical_bias="0.305"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvDaftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotocondensed_regular"
        android:paddingBottom="10dp"
        android:text="@string/create"
        android:textAlignment="center"
        android:textColor="@color/blueSea"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"  />

    <ProgressBar
        android:id="@+id/pgs_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>